fix modal z-index

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ a {
     justify-content: center;
     background: rgba(77, 77, 77, .7);
     opacity:0;
-    /* z-index:990; */
+    z-index:990;
     transition: all .4s;
     &:target {
         opacity: 1;
